--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -127,8 +127,146 @@ mean(whr$Family) # среднее
 sd(whr$Family) # стандартное отклонение
 ```
 
-## Задания после семинара 2
+## Задания после семинара 2 {#tasks_sem2}
 
 1. Прочитайте в среде, в которой вы работаете, данные WHR за 2016 год. 
 2. Посчитайте среднее, стандартное отклонение, медиану и размах (разброс от максимального до минимального значения) по всем 6 показателям, составляющим уровень счастья. Что можно сказать про них? Где самый большой размах? Где среднее и медиана оказались близко друг к другу, а где не очень? *(для подсчета медианы и размаха в R нужно будет немножко поучиться гуглить или использовать другие материалы)*
+
+## Предобработка данных {#preprocessing}
+
+После того, как мы считали данные данные в переменную (мы использовали функцию `read_csv()` для этого), часто нужно эти данные сначала **предобработать**. Во-первых, данные сами по себе могут быть не очень хорошего качества, и их нужно почистить. Во-вторых, мы никогда не работаем со всей табличкй сразу -- мы отбираем данные, например, определенную колонку, и часто нам нужны не все данные, а только соответствующие определенным условиям (например, нам нужно отобрать время реакции в группе, где испытуемые употребляли кофеин, а не плацебо). 
+
+В предобработку данных чаще всего входит:
+
+* Отбор определенных колонок
+* Фильтрация -- отбор определенных строк, удовлетворяющих определенным условиям
+* Создание новых колонок и заполнение их в соответствии с определенными услвиями
+* Работа с пропущенными значениями -- удаление или замена на какое-либо (например, среднее) значение
+
+Пойдем по порядку.
+
+### Отбор колонок {#columns}
+
+Любое почти всегда можно сделать разными способами. Чаще всего не существует правильного, если работает -- значит, правильно. Но некоторые решения бывает более оптимальными в разных контекстах. Рассмотрим разные способы отбора колонок. Обратите внимание, чем они различаются?
+
+*Сразу комментарий -- когда мы делаем операцию присвоения <-, у нас ничего не выводится в консоль. Чтобы посмотреть, что мы присвоили переменной, можно вывести ее по названию или, если речь про данные -- посмотреть с помощью функции View(). Если вы только пробуете написать операцию -- не спешите присваивать ее в переменную! Так мы сразу будем видеть результат в консоли, и если он ошибочный, это будет понятно.*
+
+**Отбор в базовом R по названию колонки**
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+var1 <- whr$`Happiness Score`
+var1
+str(var1)
+```
+
+**Отбор в базовом R по индексу**
+
+Индекс -- это номер элемента в структуре данных. Мы говорили про них, когда обсуждали многомерные массивы: в одномерной структуре, например, векторе, индекс будет состоять из одного числа, в двумернй (например, матрице или датафрейме) -- индекс состоит из двух чисел, разделенных запятой, в трехмерной -- из трех, и так далее. Индекс в R всегда пишется в квадратных скобках, например, чтобы узнать, что находится во второй строчке третьего столбца, индекс элемента будет `[2,3]`
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+var2 <- whr[,4]
+var2
+str(var2)
+```
+**Отбор с помощью пакета tidyverse по названию**
+
+Вывод в датафрейм (тиббл):
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+var3 <- whr %>%
+  select(`Happiness Score`)
+var3
+str(var3)
+```
+
+**Отбор с помощью пакета tidyverse по названию**
+
+Вывод в вектор:
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+var4 <- whr %>%
+  select(`Happiness Score`) %>%
+  pull()
+var4
+str(var4)
+```
+
+### Фильтрация (отбор строк) {#filter}
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr[1:10,]
+```
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>% 
+  slice(1:10)
+```
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(Region == "Western Europe") 
+```
+
+А теперь отфильтруем эти значения и возьмем только те значения `Happiness Score`, которые соответствуют Западной Европе:
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(Region == "Western Europe") %>%
+  select(`Happiness Score`)
+```
+
+.. и "вытащим" эти значения в числовой вектор, чтобы с ними было проще всего работать
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(Region == "Western Europe") %>%
+  select(`Happiness Score`) %>%
+  pull() 
+```
+
+Можем даже посчитать среднее в этом пайпе!
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(Region == "Western Europe") %>%
+  select(`Happiness Score`) %>%
+  pull() %>% 
+  mean()
+```
+
+
+Или посмотрим, какие страны находятся в топе-10 по `Happiness Rank`
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(`Happiness Rank` < 10) 
+```
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(`Happiness Rank` < 10) %>%
+  select(Country) %>%
+  pull() 
+```
+
+Страны, которые находятся в середине, с 50 по 100 места, и их рейтинг:
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  filter(`Happiness Rank` > 50 & `Happiness Rank` < 100) %>%
+  select(Country, `Happiness Rank`)
+```
+
+### Создание колонок {#mutate}
+
+Часто возникает задача перекодировать переменную -- например, разбить непрерывные значения на группы, чтобы посмотреть различия между ними
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>% 
+  mutate("Rank Category" = ifelse(`Happiness Rank` <=10, "top", "not")) -> whr_top
+```
+
+
+
+Задания:
+
+1. Сравните средний Happiness Score и Happiness Rank в странах Восточной и Западной Европы. И в странах Западной Европы и Южной Азии.
 
