--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -22,7 +22,7 @@ knitr::include_graphics("docs/images/variable.png")
 
 * **Числовой** (целые числа – **integer** или **numeric**, вещественные числа – **real**, числа с плавающей точкой (дробные) – **float**)
 * **Текстовый** (**character**, если один символ, или **string** – много символов)
-* **Логический** (logical – принимает только значения True / False)
+* **Логический** (**logical** или **boolean** – принимает только значения True / False)
 * **NA** – пропущенные значения (not available)
 * **NaN** – not a number, результат выполнения невозможной числовой операции (например, деление на 0)
 
@@ -42,7 +42,7 @@ https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/
 </p>
 
 
-## Операции с переменными и функции
+## Операции с переменными и функции {#operarions}
 
 В зависимости от того, с переменными какого типа мы работаем, мы можем выполнять с ними разные операции.
 
@@ -55,7 +55,39 @@ https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/
 |   Логический   |          = (присвоение),>, <, == (равно), != (не равно)         |
 
 
-## Начало рабты в среде
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+# создание векторов
+c(1, 2, 3, 4, 5) # c() -- это  функция
+c(1, 2, 3, 4, 5, 7, 21, 143)
+
+1:5 #функция перечисления всех значений от 1 до 5
+1:10 #функция перечисления всех значений от 1 до 10
+
+seq(1, 10, 2) # функция перечисления всех значений от 1 до 10 с шагом 2
+
+#пример приведения типов -- TRUE и FALSE превратились в 1 и 0
+c(1, 2, 3, 4, 5, TRUE, FALSE)
+c(1, 2, 3, 4, 5, "1", "0")
+
+# логические выражения
+
+a <- 5
+b <- 10
+
+a > b
+a >= b
+a == b
+a != b
+a <= b
+a < b
+
+#функция, которая выполняет действия в зависимости от условия ...если ... то:
+# ifelse() содержит 3 аргумента: ( условие; что делать, если условие верно;
+# что делать, если условие ложно)
+
+ifelse(a < b, a+b, "а не меньше b")
+```
+## Начало работы в среде
 
 В этом учебнике я буду приводить задания для тренировки в любой среде работы с данными и код работы с данными в R.
 
@@ -75,7 +107,7 @@ library(tidyverse)
 
 Установить пакет достаточно всего один раз после установки R, подключать через `library` нужно всегда, когда открываем RStudio. Ошибка вида "could not find function" в 99% случаев говорит о том, что пакет, из которого она используется, не подключен.
 
-## Начало рабты с данными
+## Начало работы с данными
 
 Мы будем работать с данными World Happiness Report за 2016 год https://www.kaggle.com/datasets/unsdsn/world-happiness. Это Всемирный доклад о счастье https://en.wikipedia.org/wiki/World_Happiness_Report , которой показывает, как жители разных стран оценивают свой уровень счастья. В данных за 2016 год, с которыми мы будем работать, участвую 157 стран. *Кстати, вы можете скачать данные за разные года и посмотреть, как менялось количество стран-участниц? Чуть позже мы научимся делать это с помощью кода*. Здесь есть следующие переменные:
 
@@ -88,7 +120,7 @@ library(tidyverse)
 * Freedom - Свободы
 * Trust (Goverment Corruption) - воспринимаемый уровень коррупции
 * Generosity - сколько жертвуют на благотворительность
-* Distopia - страна-антиутопия, где самые низкие показатели по всем парметрам из существующих
+* Dystopia - страна-антиутопия, где самые низкие показатели по всем парметрам из существующих
 
 
 Economy, Family, Health, Freedom, Trust, Generosity -- 6 показателей, по которым считается уровень счастья.
@@ -161,7 +193,8 @@ str(var1)
 
 **Отбор в базовом R по индексу**
 
-Индекс -- это номер элемента в структуре данных. Мы говорили про них, когда обсуждали многомерные массивы: в одномерной структуре, например, векторе, индекс будет состоять из одного числа, в двумернй (например, матрице или датафрейме) -- индекс состоит из двух чисел, разделенных запятой, в трехмерной -- из трех, и так далее. Индекс в R всегда пишется в квадратных скобках, например, чтобы узнать, что находится во второй строчке третьего столбца, индекс элемента будет `[2,3]`
+Индекс -- это номер элемента в структуре данных. Мы говорили про них, когда обсуждали многомерные массивы: в одномерной структуре, например, векторе, индекс будет состоять из одного числа, в двумернй (например, матрице или датафрейме) -- индекс состоит из двух чисел, разделенных запятой, в трехмерной -- из трех, и так далее. Индекс в R всегда пишется в квадратных скобках, например, чтобы узнать, что находится во второй строчке третьего столбца, индекс элемента будет `[2,3]`.
+**Сначала идет номер строки, затем -- номер столбца.** Если мы хотим вывести все строки или все столбцы -- на месте этого индекса ничего не ставится. Например, если я хочу вывести все строки из третьей колонки, я напишу `[,3]`
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 var2 <- whr[,4]
@@ -170,26 +203,59 @@ str(var2)
 ```
 **Отбор с помощью пакета tidyverse по названию**
 
+Сначала пара важных моментов отнсосительно работы с пакетом и кульурой написания кода `tidyverse`. Последовательность операций в рамках одной задачи пишется построчно с переносом на следующую строку в виде [пайпа](https://magrittr.tidyverse.org/reference/pipe.html) ` %>% ` -- символа, который позволяет испльзовать в качестве аргумента функции следующей строки то, что получилось в результате выполнения предыдущей. На первой строке в пайп передаются сами данные, то есть название переменной, в которую мы их записали. Далее на каждой следующей строке в качестве первого аргумента функции в скобках будет применяться результат выполнения предыдущей. Подробнее про tidyverse https://pozdniakov.github.io/tidy_stats/110-tidyverse_basic.html и про пайпы https://pozdniakov.github.io/tidy_stats/110-tidyverse_basic.html
+
+Внутри `tidyverse` используется такая структура данных, как `tibble`(https://tibble.tidyverse.org/). Тиббл -- это модицифированный датафрейм, о чем мы уже говорили, когда обсуждали [структуры данных](#data_structures)
+
 Вывод в датафрейм (тиббл):
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 var3 <- whr %>%
   select(`Happiness Score`)
 var3
+
+#смотрим структуру данных
 str(var3)
+```
+
+С помощью функции `select()` мы можем вытаскивать даже не одну колонку, а несколько:
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  select(Country,`Happiness Score`)
 ```
 
 **Отбор с помощью пакета tidyverse по названию**
 
-Вывод в вектор:
+Обратите внимание -- предыдущий вывод так же является тибблом, а не вектором. Чтобы вывести в вектор, надо выполнить еще один шаг с помощью функции `pull()`, которая как бы "вытягивает" значения из тиббла:
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 var4 <- whr %>%
   select(`Happiness Score`) %>%
   pull()
 var4
+
+#смотрим структуру данных
 str(var4)
 ```
 
+В этом случае мы можем даже в этом же пайпе посчитать медиану или среднее:
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>%
+  select(`Happiness Score`) %>% #результат -- тиббл
+  pull() %>% #результат -- вектор
+  median()
+```
+
+А так будет ошибка
+
+```{r eval=FALSE, echo = TRUE, message = FALSE}
+whr %>%
+  select(`Happiness Score`) %>% #результат -- тиббл
+  median()
+```
 ### Фильтрация (отбор строк) {#filter}
+
+Очень часто встает задача фильтрации строк: когда нужны не все данные, а удовлетворяющие какому-либо условию
+
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr[1:10,]
@@ -202,71 +268,73 @@ whr %>%
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr %>%
-  filter(Region == "Western Europe") 
+  filter(Region == "Central and Eastern Europe") 
 ```
 
-А теперь отфильтруем эти значения и возьмем только те значения `Happiness Score`, которые соответствуют Западной Европе:
+А теперь отфильтруем эти значения и возьмем только те значения `Happiness Score`, которые соответствуют Центральной и восточной Европе
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr %>%
-  filter(Region == "Western Europe") %>%
-  select(`Happiness Score`)
+  filter(Region == "Central and Eastern Europe")  %>%
+  select(`Happiness Score`) 
 ```
 
 .. и "вытащим" эти значения в числовой вектор, чтобы с ними было проще всего работать
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr %>%
-  filter(Region == "Western Europe") %>%
+  filter(Region == "Central and Eastern Europe") %>%
   select(`Happiness Score`) %>%
   pull() 
 ```
 
-Можем даже посчитать среднее в этом пайпе!
+И посчитаем среднее
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr %>%
-  filter(Region == "Western Europe") %>%
+  filter(Region == "Central and Eastern Europe") %>%
   select(`Happiness Score`) %>%
   pull() %>% 
   mean()
 ```
 
+Теперь можем сравнить средний `Happiness Score` по всем странам (считали его ранее) и только по Центральной и восточной Европе. Что можно про них сказать?
 
 Или посмотрим, какие страны находятся в топе-10 по `Happiness Rank`
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr %>%
-  filter(`Happiness Rank` < 10) 
+  filter(`Happiness Rank` <= 10) 
 ```
 
-```{r eval=TRUE, echo = TRUE, message = FALSE}
-whr %>%
-  filter(`Happiness Rank` < 10) %>%
-  select(Country) %>%
-  pull() 
-```
 
-Страны, которые находятся в середине, с 50 по 100 места, и их рейтинг:
-
-```{r eval=TRUE, echo = TRUE, message = FALSE}
-whr %>%
-  filter(`Happiness Rank` > 50 & `Happiness Rank` < 100) %>%
-  select(Country, `Happiness Rank`)
-```
 
 ### Создание колонок {#mutate}
 
-Часто возникает задача перекодировать переменную -- например, разбить непрерывные значения на группы, чтобы посмотреть различия между ними
+Часто возникает задача перекодировать переменную -- например, разбить непрерывные значения на группы, чтобы посмотреть различия между ними.
+
+Например, продолжая предыдущий пример с фильтрацией первых 10 в рейтинге стран: для сравнения показателей, вклдывающихся в уровень счастья, нас может интересовать, отличаются ли "топовые" страны от всех остальных. Для этого нам проще создать отдельную колонку, которая служит индикатором, является ли страна "топовой". Разберем, что это значит: нам нужно 1) создать новую колонку и 2) записать в нее значения, удовлятворяющие определенному условию. (1) достигается с помощью функции `mutate()` (как бы "измени" датафрейм, "примутируй" к нему колонку), а (2) достигается очень похожим на фильтрацию способом -- с помощью функции `ifelse` ([пример выше](#operarions))
+
+На паре топовые и не топовые страны превратились в `hehe` и `not hehe`, так и оставим.
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
-whr %>% 
-  mutate("Rank Category" = ifelse(`Happiness Rank` <=10, "top", "not")) -> whr_top
+whr_top <- whr %>% 
+  mutate("Rank Category" = ifelse(`Happiness Rank` <=10, "hehe", "not hehe"))
+
+whr_top
 ```
 
+Видим, что на последнем месте появилась новая колонка `Rank Category`.
+
+## Задания после семинара 3 {#tasks_sem3}
+
+1. Выполните все примеры, которые есть в этом разделе, убедитесь, что все работает верно.
+2. Посмотрите, какие страны находятся на местах с 1 по 10 и с 147 по 157 (в выводе должно быть по две колонки)
+3. Сравните средний показатель экономики `Economy (GDP per Capita)` и уровень счастья `Happiness Score` в странах Восточной и центральной (Central and Eastern Europe) и Западной Европы (Western Europe). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
+4. Сравните средний показатель экономики`Economy (GDP per Capita)` и уровень счастья `Happiness Score`  в странах Западной Европы (Western Europe) и Южной Азии (Southern Asia). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
+5*. Посчитайте средний `Happiness Score` по всем странам и выведете страны, которые лежат в границах ± 1 от среднего `Happiness Score` (в выводе должно быть по две колонки)
+6*. Создайте колонку, в которой будет содержаться информации, в текущей стране `Happiness Score` выше или ниже среднего значения (колонка может быть заполнена, например, значениями upper и lower или любыми другими обозначениями)
 
 
-Задания:
 
-1. Сравните средний Happiness Score и Happiness Rank в странах Восточной и Западной Европы. И в странах Западной Европы и Южной Азии.
 
