--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -329,10 +329,10 @@ whr_top
 ## Задания после семинара 3 {#tasks_sem3}
 
 1. Выполните все примеры, которые есть в этом разделе, убедитесь, что все работает верно.
-2. Посмотрите, какие страны находятся на местах с 1 по 10 и с 147 по 157 (в выводе должно быть по две колонки)
+2. Посмотрите, какие страны находятся на местах с 1 по 10 и с 147 по 157 (в выводе должно быть по две колонки: `Region` и `Happiness Rank`)
 3. Сравните средний показатель экономики `Economy (GDP per Capita)` и уровень счастья `Happiness Score` в странах Восточной и центральной (Central and Eastern Europe) и Западной Европы (Western Europe). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
 4. Сравните средний показатель экономики`Economy (GDP per Capita)` и уровень счастья `Happiness Score`  в странах Западной Европы (Western Europe) и Южной Азии (Southern Asia). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
-5. Посчитайте средний `Happiness Score` по всем странам и выведете страны, которые лежат в границах ± 1 от среднего `Happiness Score` (в выводе должно быть по две колонки)
+5. Посчитайте средний `Happiness Score` по всем странам и выведете страны, которые лежат в границах ± 1 от среднего `Happiness Score` (в выводе должно быть по две колонки: `Region` и `Happiness Score`)
 6. Создайте колонку, в которой будет содержаться информации, в текущей стране `Happiness Score` выше или ниже среднего значения (колонка может быть заполнена, например, значениями upper и lower или любыми другими обозначениями)
 
 
