--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -587,6 +587,18 @@ whr_new %>%
   ggplot(aes(x = `Happiness Score`)) +
   geom_histogram(binwidth = 0.5) +
   theme_minimal()
+
+# раскрасим заливку (fill) в розовый, а линии (color) в фиолетовый
+whr_new %>%
+  ggplot(aes(x =`Happiness Score`)) +
+  geom_histogram(fill = "pink", color = "violet", binwidth = 0.5) +
+  theme_minimal()
+
+# добавим 50% прозрачности
+whr_new %>%
+  ggplot(aes(x =`Happiness Score`)) +
+  geom_histogram(fill = "pink", color = "violet", alpha = 0.5, binwidth = 0.5) +
+  theme_minimal()
 ```
 
 Построим аналогичный график плотности вероятности
@@ -594,6 +606,19 @@ whr_new %>%
 whr_new %>% 
   ggplot(aes(x = `Happiness Score`)) +
   geom_density() +
+  theme_minimal()
+
+# раскрасим линию в фиолетовый
+whr_new %>%
+  ggplot(aes(x =`Happiness Score`)) +
+  geom_density(color = "violet") +
+  theme_minimal()
+
+# поменяем тип линии на пунктир (соответствие типов линий и кодов
+# можно погуглить или посмотреть в читшите)
+whr_new %>%
+  ggplot(aes(x =`Happiness Score`)) +
+  geom_density(color = "violet", linetype = 5) +
   theme_minimal()
 ```
 
@@ -614,3 +639,16 @@ whr_new %>%
   geom_point() +
   theme_minimal()
 ```
+
+
+## Задания после семинара 4 {#tasks_sem4}
+
+Для заданий используется датасет [`2016-2`](https://raw.githubusercontent.com/elenary/StatsForDA/main/2016-2.csv) 
+
+1. Посчитайте, сколько всего суммарно NA в колонках `Economy (GDP per Capita)`, `Family`, `Health (Life Expectancy)`, `Freedom `, `Trust (Government Corruption)`, `Generosity` *(задание можно сделать разными способами, подойдет любой, дающий верный овтет)*
+2. Посчитайте описательные статистики для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `: среднее, медиану, моду, стандартное отклонение, дисперсию и межквартильный размах, а также *(только для тех, кто работает в R)* вычислите значения для 1 и 3 квартилей. Ответы должны быть отличны от `NA` *(один из способов узнать значения по квартилям -- например, с помощью отдельных общих функций для описательных статистик)*.
+3. Используя созданную в [прошлой домашке](#tasks_sem3) колонку co значениями `upper` и `lower` в зависимости от значений `Happiness Score`, посчитайте среднее и стандартное отклонения внутри этих групп (`upper` и `lower`) для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `. *(Только для тех, кто работает в R)* Сравните полученные средние значения со значениями для 1 и 3 квартилей из предыдущего задания. Что можно сказать про них? 
+4. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
+5. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
+6. Посчитайте коэффициент корреляции между переменными `Family` и `Freedom `.
+
