--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -578,17 +578,20 @@ whr_new %>%
   ggplot(aes(x = `Happiness Score`)) +
   geom_histogram() +
   theme_minimal()
-```
 
-Можем регулировать ширину "кирпичика"
+# Можем регулировать ширину "кирпичика"
 
-```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr_new %>% 
   ggplot(aes(x = `Happiness Score`)) +
   geom_histogram(binwidth = 0.5) +
   theme_minimal()
+```
 
+Можем менять цвета у двух вещей: заливки и контура, как и обычно у фигур в паверпоинте или ворде. Для заливки используется аругмент fill, для контура -- color. У некоторых геомов есть только контур -- как, например, диаграмма рассеяния, так как точки не имеют заливки.
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
 # раскрасим заливку (fill) в розовый, а линии (color) в фиолетовый
+# можем использовать не слова вроде pink и violet, а коды цветов в 16-ричной системе, например "#355C7D"
 whr_new %>%
   ggplot(aes(x =`Happiness Score`)) +
   geom_histogram(fill = "pink", color = "violet", binwidth = 0.5) +
@@ -631,7 +634,7 @@ whr_new %>%
   theme_minimal()
 ```
 
-И можем даже раскрасить точки на этом графике в зависимости от третьей переменной! Например, региона. Тут следующее правило: если хотим залить фигуру, то для раскраски используется аругмент fill. Если покрасить контур, то используется аргумент color (как контур и заливка в ворде или паверпоинт). У некоторых геомов есть только контур -- как, например, диаграмма рассеяния.
+И можем даже раскрасить точки на этом графике в зависимости от третьей переменной! Например, региона. Все ровно так же, как и с цветами до этого: если хотим залить фигуру в зависимости от значений третьей переменной, то для раскраски используется аругмент fill, если покрасить контур -- то color (как контур и заливка в ворде или паверпоинт). Но с той разницей, что теперь fill color задаются **внутри аестетик**, так как это все еще про "натягивание совы на глобус", то есть наших данных на график. 
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr_new %>%
@@ -648,7 +651,7 @@ whr_new %>%
 1. Посчитайте, сколько всего суммарно NA в колонках `Economy (GDP per Capita)`, `Family`, `Health (Life Expectancy)`, `Freedom `, `Trust (Government Corruption)`, `Generosity` *(задание можно сделать разными способами, подойдет любой, дающий верный овтет)*
 2. Посчитайте описательные статистики для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `: среднее, медиану, моду, стандартное отклонение, дисперсию и межквартильный размах, а также *(только для тех, кто работает в R)* вычислите значения для 1 и 3 квартилей. Ответы должны быть отличны от `NA` *(один из способов узнать значения по квартилям -- например, с помощью отдельных общих функций для описательных статистик)*.
 3. Используя созданную в [прошлой домашке](#tasks_sem3) колонку co значениями `upper` и `lower` в зависимости от значений `Happiness Score`, посчитайте среднее и стандартное отклонения внутри этих групп (`upper` и `lower`) для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `. *(Только для тех, кто работает в R)* Сравните полученные средние значения со значениями для 1 и 3 квартилей из предыдущего задания. Что можно сказать про них? 
-4. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
-5. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
+4. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, *(только для тех, кто работает в R)* используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
+5. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и *(только для тех, кто работает в R)* раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
 6. Посчитайте коэффициент корреляции между переменными `Family` и `Freedom `.
 
